# django-windowsauthtoken

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties  web.config
.github/workflows/: code-analysis.yml  python-package.yml  python-publish.yml  python-test.yml
sample_project/: asgi.py  settings.py  urls.py  web.config.example
sample_project/sample_project/: settings.py  urls.py  wsgi.py
src/django_windowsauthtoken/: formatters.py  middleware.py  views.py
tests/: conftest.py  test_formatters.py  test_middleware.py  test_views.py  urlconf.py
