[project]
name = "django-windowsauthtoken"
version = "0.1.0"
description = "Windows Authentication Token handling for Django"
readme = "README.md"
authors = [
    { name = "Tom Hendrikx", email = "tom@whyscream.net" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "pywin32>=311; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
]
