[project]
name = "django-windowsauthtoken"
version = "0.1.0"
description = "Windows Authentication Token handling for Django"
license = "BSD-3-Clause"
readme = "README.md"
authors = [
    { name = "Tom Hendrikx", email = "tom@whyscream.net" }
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "pywin32>=311; sys_platform == 'win32'",
]

[build-system]
requires = ["setuptools>=66.1.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
    "F", # pyflakes
    "C", # mccabe
]

[tool.coverage.run]
branch = true
source = ["django_windowsauthtoken"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
