[project]
name = "django-windowsauthtoken"
description = "IIS Windows Authentication Token handling for Django"
dynamic = ["version"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Tom Hendrikx", email = "tom@whyscream.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "pywin32>=311; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/whyscream/django-windowsauthtoken"
Issues = "https://github.com/whyscream/django-windowsauthtoken/issues"

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
    "F", # pyflakes
    "C", # mccabe
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["django_windowsauthtoken"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"
